# PeaTMOSS-Artifact

./: README.md  script_plot.py
Data-Cleaning/: filter_repo_papers_with_code.py
Data-Collection/: List of signatures and GitHub CLI fields and command.xlsx  PyTorch.py  data_collection.py  parse.py  sql_alch.py
Data-Collection/ptm_torrent/: GitHubRepo.json  HF_none_freq.sql  HuggingFace.py  ModelHub.py  ModelHubClass.py  ModelZoo.py  ONNXModelZoo.py  TFModelGarden.py  dependency.py  docker-compose.yml  (+8 more)
Examples/: PeaTMOSS_demo.py
LLM-Pipeline/: README.md
License-Analysis/: LICENSE  README.md  pyproject.toml  requirements.txt
License-Analysis/analyzeIncompatibilities/: Linux-Foundation-OSS-License-Compatibility.xlsx  README  all_gh_licenses.json  example.csv  example.json  gh_other.csv  hf_other.csv  incompatibleMapping.json  licenseCompatibilitiesSankey.py  mapping.csv  new_sankey.py  otherCount.py  sankey_lib.py
License-Analysis/figures/ptmMetadata/: createFigure.py
License-Analysis/figures/repoFrequencyByPTMTask/: createFigure.py  createFigure_2.py
License-Analysis/figures/sankey/: createSankeyFigure.py
License-Analysis/ghRepos/: countFilesPerLicense.py  identifyLicense.bash
License-Analysis/other/: createHFGHLicensePairs.py  extractRepos.py
License-Analysis/projectPairings/: extractPairings.py  extractPairings_tasks.py
License-Analysis/ptmProjects/: extractDomains.py  extractLicenses.py  extractMetadata.py  extractTasks.py
Plots/: fig10_11.ipynb  fig7.ipynb  fig8.ipynb  fig9.ipynb
static-analysis/: ExtractSource.py  scalpel.core.mnode.py
(+3 files in other folders)
